# d-robots

./: .gitignore  Makefile  README.md
Simulator/: README.md  Simulator.pro  ressources.qrc
Simulator/src/: EventHandler.cpp  EventHandler.hpp  Robot.cpp  Robot.hpp  RobotsHandler.cpp  RobotsHandler.hpp  Router.cpp  Router.hpp  main.cpp  mainwindow.cpp  mainwindow.h  tester.h
robot/: .gitignore  Cargo.toml  README.md  cargo_run.sh  cargo_run2.sh  launch.py  map.json  map_example.json
robot/output/: viewer.html
robot/src/: app.rs  events.rs  main.rs  messages.rs
robot/src/ai/: mod.rs  pathfinder.rs
robot/src/map/: mod.rs  polygon.rs
robot/src/robot/: mod.rs
