[package]
name = "robot"
version = "0.1.0"
authors = ["efugier <mail@emilienfugier.net>"]
edition = "2018"

[dependencies]
structopt = "0.2"
color-backtrace = "0.1"
log = "0.4"
env_logger = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6.5"
shrinkwraprs = "0.2.1"
gag = "0.1.10"
