[package]
name = "robot"
version = "0.1.0"
authors = ["efugier <mail@emilienfugier.net>", "Mathis Chenuet <mathis.chenuet@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
color-backtrace = "0.1"
log = "0.4"
env_logger = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rand = "0.6.5"
shrinkwraprs = "0.2.1"
gag = "0.1.10"
image = "0.21"
imageproc = "0.18"
ndarray = { version = "0.12", features = ["serde-1"]}
itertools = "0.8"
